<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flora</string>

    <string name="activity_main_title">Flora</string>
    <string name="activity_synchro_title">Data synchronization</string>
    <string name="activity_preferences_title">Settings</string>
    <string name="activity_observers_title">Observers</string>
    <string name="activity_frequency_estimation_title">Estimation</string>
    <string name="activity_frequency_transect_title">Transect</string>
    <string name="activity_counting_exhaustive_title">Exhaustive</string>
    <string name="activity_counting_sampling_title">Sampling</string>

    <string name="preference_category_observers">Observers</string>
    <string name="preference_category_observers_default_observer">Default observer</string>
    <string name="preference_category_pointing">Pointing</string>
    <string name="preference_category_pointing_display_scale">Display the map scale</string>
    <string name="preference_category_density">Quality</string>
    <string name="preference_category_density_title">Quality rendering of map</string>
    <string name="preference_category_density_dialog">Choice of rendering</string>

    <string name="pager_fragment_taxa_found_title">Did you find the specie ?</string>
    <string name="pager_fragment_webview_ap_title">Map (AP)</string>
    <string name="pager_fragment_area_title">Area: %s</string>
    <string name="pager_fragment_frequencies_title">Frequency</string>
    <string name="pager_fragment_phenology_title">Phenology</string>
    <string name="pager_fragment_counting_title">Counting</string>
    <string name="pager_fragment_physiognomy_title">Physiognomy</string>
    <string name="pager_fragment_disturbances_title">Disturbances</string>
    <string name="pager_fragment_remarks_title">Remarks</string>
    <string name="pager_fragment_choose_action_title">Choose an action</string>
    <string name="pager_fragment_webview_pa_title">Map (PA)</string>

    <string name="message_saving_current_input_failed">Unable to save your input</string>
    <string name="message_pa_not_contains_all_aps">This PA does not contains all APs</string>
    <string name="message_counting_invalid">Invalid input data</string>

    <string name="progress_message_saving_current_input">Saving current input &#8230;</string>

    <string name="alert_dialog_confirm_cancel_title">Quit ?</string>
    <string name="alert_dialog_confirm_cancel_input_all_message">The current entry is still in progress. Do you want to quit now and continue later ?</string>
    <string name="alert_dialog_confirm_delete_area_title">Delete this AP ?</string>
    <string name="alert_dialog_confirm_delete_area_message">A AP is in progress.\nDelete this AP ?</string>
    <string name="alert_dialog_confirm_delete_areas_title">Delete all APs ?</string>
    <string name="alert_dialog_confirm_delete_areas_message">This taxon contains APs.\nDelete all APs ?</string>
    <string name="alert_dialog_confirm_quit_title">Quit ?</string>
    <string name="alert_dialog_confirm_quit_finish_title">Choose an action</string>
    <string name="alert_dialog_action_start_new_input">Start a new prospection</string>
    <string name="alert_dialog_action_close_app">Close application</string>
    <string name="alert_dialog_confirm_quit_finish_message">Your Prospecting area has been saved.</string>
    <string name="alert_dialog_confirm_input_continue_title">Existing input</string>
    <string name="alert_dialog_confirm_input_continue_message">You have an existing input not finished.\nContinue ?\nNote: This input will be deleted if you want to start a new one</string>
    <string name="alert_dialog_confirm_input_continue_action_yes">Yes</string>
    <string name="alert_dialog_confirm_input_continue_action_no">Start a new input</string>

    <string name="observers_and_date_date_format">MMMM dd, yyyy</string>

    <string name="taxa_found_button_yes">yes</string>
    <string name="taxa_found_button_no">no</string>

    <string name="area_none">None</string>
    <string name="area_none_text">No area defined</string>
    <string name="area_point">Point</string>
    <string name="area_path">Path</string>
    <string name="area_polygon">Polygon</string>
    <string name="area_point_area_hint">Area (m&#x00B2;)</string>
    <string name="area_path_length_computed">Path length: %.2f m</string>
    <string name="area_path_width_hint">Width (m)</string>
    <string name="area_path_incline">Incline:</string>
    <string name="area_polygon_planimetric_area_computed">Planimetric area: %.2f m&#x00B2;</string>
    <string name="area_computed">Computed area: %.2f m&#x00B2;</string>

    <string name="frequencies_selected_frequency_computed">Calculated frequency: %s</string>
    <string name="frequency_estimation_abacus_hint">abacus</string>
    <string name="frequency_estimation_min_value">0</string>
    <string name="frequency_estimation_frequency">Frequency:</string>
    <string name="frequency_estimation_frequency_precentage">&#37;</string>
    <string name="frequency_transect_step_advice">Recommended step length for 100 points: %d cm</string>
    <string name="frequency_transect_number_of_transects">Number of transects:</string>
    <string name="frequency_transect_yes">YES</string>
    <string name="frequency_transect_no">NO</string>
    <string name="frequency_transect_number_of_steps">Number of steps: %d</string>
    <string name="frequency_transect_frequency">Frequency: %s</string>
    <string name="frequency_transect_frequency_undefined">Frequency: undefined</string>

    <string name="phenology_no_data">No phenology to display</string>

    <string name="counting_no_method">None</string>
    <string name="counting_selected_counting">Fertile: %1$d, Sterile: %2$d</string>
    <string name="counting_plot">Plot</string>
    <string name="counting_elements">Total number of items counted</string>
    <string name="counting_fertile">Fertile</string>
    <string name="counting_sterile">Sterile</string>
    <string name="counting_exhaustive_hint">Total Number of elements accounts for this AP</string>
    <string name="counting_sampling_plot_surface">Plot surface (m&#x00B2;)</string>
    <string name="counting_sampling_plot_number">Number of plots:</string>
    <string name="counting_sampling_fertile_count">Fertile:</string>
    <string name="counting_sampling_sterile_count">Sterile:</string>
    <plurals name="counting_sampling_fertile_total_count">
        <item quantity="other">%d fertile</item>
    </plurals>
    <plurals name="counting_sampling_sterile_total_count">
        <item quantity="other">%d sterile</item>
    </plurals>

    <string name="physionomy_no_data">No physionomy to display</string>

    <string name="disturbances_no_data">No disturbances to display</string>

    <string name="remarks_hint">Add a comment</string>

    <string name="choose_action_title_quit_step">Quit this step ?</string>
    <string name="choose_action_yes">Yes: finish this step</string>
    <string name="choose_action_no">No: close this dialog</string>
    <string name="choose_action_message">Your presence area has been saved.</string>
    <string name="choose_action_pause">Pause and continue the prospection</string>
    <string name="choose_action_area">Add a new presence area</string>
    <string name="choose_action_finish">Finish the prospection</string>

    <string name="action_collection_pa_display_hide">Display or hide all PAs</string>

    <string name="button_finish">Finish</string>

</resources>
