<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewPathLengthComputed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/area_path_length_computed"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="RtlHardcoded"/>

    <EditText
        android:id="@+id/editTextPathWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPathLengthComputed"
        android:hint="@string/area_path_width_hint"
        android:inputType="numberDecimal"
        android:singleLine="true">
        <requestFocus/>
    </EditText>

    <Spinner
        android:id="@+id/spinnerIncline"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/editTextPathWidth"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/textViewAreaComputed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinnerIncline"
        android:text="@string/area_computed"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/textViewIncline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerIncline"
        android:layout_toLeftOf="@+id/spinnerIncline"
        android:text="@string/area_path_incline"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="RtlHardcoded"/>

</RelativeLayout>
