<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageAbacus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/frequency_estimation_abacus_hint">
    </ImageView>

    <TextView
        android:id="@+id/textViewSeekBarMinValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/imageAbacus"
        android:text="@string/frequency_estimation_min_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="RtlHardcoded">
    </TextView>

    <TextView
        android:id="@+id/textViewSeekBarMaxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/imageAbacus"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="RtlHardcoded">
    </TextView>

    <SeekBar
        android:id="@+id/seekBarFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSeekBarMinValue"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </SeekBar>

    <EditText
        android:id="@+id/editTextFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seekBarFrequency"
        android:layout_centerHorizontal="true"
        android:ems="3"
        android:inputType="number"
        android:nextFocusDown="@id/seekBarFrequency"
        android:nextFocusUp="@id/seekBarFrequency"
        android:singleLine="true"
        android:textStyle="bold">

    </EditText>

    <TextView
        android:id="@+id/textViewFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/editTextFrequency"
        android:layout_toLeftOf="@id/editTextFrequency"
        android:text="@string/frequency_estimation_frequency"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/textViewFrequencyPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/editTextFrequency"
        android:layout_toRightOf="@id/editTextFrequency"
        android:text="@string/frequency_estimation_frequency_precentage"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"/>

    <GridView
        android:id="@+id/gridViewAbacus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextFrequency"
        android:layout_centerHorizontal="true"
        android:numColumns="3">
    </GridView>

</RelativeLayout>